--- a/style/estilo.css
+++ b/style/estilo.css
@@ -212,6 +212,8 @@ a {
 
 .contato table {
     width: 100%;
+    max-width: 64px;
+    height: auto;
     text-align: center;
     border: solid 1px #ccc;
     border-collapse: collapse;
